# traveltime-sdk-openAPI

./: README.md  update.sc
ada/: defaultpackage.gpr
ada-server/: README.md  defaultpackage.gpr
android/: README.md
apache2/: DefaultApi.conf
apex/: README.md
asciidoc/: index.adoc
aspnetcore/: Org.OpenAPITools.sln  README.md  build.bat  build.sh  traveltimeplatform.sln
c/: CMakeLists.txt  README.md
c/.openapi-generator/: FILES
c/api/: DefaultAPI.c  DefaultAPI.h
c/docs/: DefaultAPI.md  coords.md  request_arrival_time_period.md  request_level_of_detail.md  request_location.md  request_range_full.md  request_range_no_max_results.md  request_routes.md  request_routes_arrival_search.md  request_routes_departure_search.md  request_routes_property.md  request_supported_locations.md  request_time_filter.md  request_time_filter_arrival_search.md  request_time_filter_departure_search.md  request_time_filter_fast.md  request_time_filter_fast_arrival_many_to_one_search.md  request_time_filter_fast_arrival_one_to_many_search.md  request_time_filter_fast_arrival_searches.md  request_time_filter_fast_property.md  request_time_filter_postcode_districts.md  request_time_filter_postcode_districts_arrival_search.md  request_time_filter_postcode_districts_departure_search.md  request_time_filter_postcode_districts_property.md  request_time_filter_postcode_sectors.md  request_time_filter_postcode_sectors_arrival_search.md  request_time_filter_postcode_sectors_departure_search.md  request_time_filter_postcode_sectors_property.md  request_time_filter_postcodes.md  request_time_filter_postcodes_arrival_search.md  request_time_filter_postcodes_departure_search.md  request_time_filter_postcodes_property.md  request_time_filter_property.md  request_time_map.md  request_time_map_arrival_search.md  request_time_map_departure_search.md  request_time_map_property.md  request_transportation.md  request_transportation_fast.md  request_union_on_intersection.md  (+54 more)
c/include/: apiClient.h
c/model/: coords.c  coords.h  request_arrival_time_period.c  request_arrival_time_period.h  request_level_of_detail.c  request_level_of_detail.h  request_location.c  request_location.h  request_range_full.c  request_range_full.h  request_range_no_max_results.c  request_range_no_max_results.h  request_routes.c  request_routes.h  request_routes_arrival_search.c  request_routes_arrival_search.h  request_routes_departure_search.c  request_routes_departure_search.h  request_routes_property.c  request_routes_property.h  request_supported_locations.c  request_supported_locations.h  request_time_filter.c  request_time_filter.h  request_time_filter_arrival_search.c  request_time_filter_arrival_search.h  request_time_filter_departure_search.c  request_time_filter_departure_search.h  request_time_filter_fast.c  request_time_filter_fast.h  request_time_filter_fast_arrival_many_to_one_search.c  request_time_filter_fast_arrival_many_to_one_search.h  request_time_filter_fast_arrival_one_to_many_search.c  request_time_filter_fast_arrival_one_to_many_search.h  request_time_filter_fast_arrival_searches.c  request_time_filter_fast_arrival_searches.h  request_time_filter_fast_property.c  request_time_filter_fast_property.h  request_time_filter_postcode_districts.c  request_time_filter_postcode_districts.h  (+146 more)
c/src/: apiClient.c
c/unit-test/: test_coords.c  test_request_arrival_time_period.c  test_request_level_of_detail.c  test_request_location.c  test_request_range_full.c  test_request_range_no_max_results.c  test_request_routes.c  test_request_routes_arrival_search.c  test_request_routes_departure_search.c  test_request_routes_property.c  test_request_supported_locations.c  test_request_time_filter.c  test_request_time_filter_arrival_search.c  test_request_time_filter_departure_search.c  test_request_time_filter_fast.c  test_request_time_filter_fast_arrival_many_to_one_search.c  test_request_time_filter_fast_arrival_one_to_many_search.c  test_request_time_filter_fast_arrival_searches.c  test_request_time_filter_fast_property.c  test_request_time_filter_postcode_districts.c  test_request_time_filter_postcode_districts_arrival_search.c  test_request_time_filter_postcode_districts_departure_search.c  test_request_time_filter_postcode_districts_property.c  test_request_time_filter_postcode_sectors.c  test_request_time_filter_postcode_sectors_arrival_search.c  test_request_time_filter_postcode_sectors_departure_search.c  test_request_time_filter_postcode_sectors_property.c  test_request_time_filter_postcodes.c  test_request_time_filter_postcodes_arrival_search.c  test_request_time_filter_postcodes_departure_search.c  test_request_time_filter_postcodes_property.c  test_request_time_filter_property.c  test_request_time_map.c  test_request_time_map_arrival_search.c  test_request_time_map_departure_search.c  test_request_time_map_property.c  test_request_transportation.c  test_request_transportation_fast.c  test_request_union_on_intersection.c  test_response_bounding_box.c  (+53 more)
cpp-qt5-client/client/: CMakeLists.txt  OAICoords.cpp  OAICoords.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEnum.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIObject.h  OAIRequestArrivalTimePeriod.cpp  OAIRequestArrivalTimePeriod.h  OAIRequestLocation.cpp  OAIRequestLocation.h  OAIRequestRangeFull.cpp  OAIRequestRangeFull.h  OAIRequestRangeNoMaxResults.cpp  OAIRequestRangeNoMaxResults.h  OAIRequestRoutes.cpp  OAIRequestRoutes.h  OAIRequestRoutesArrivalSearch.cpp  OAIRequestRoutesArrivalSearch.h  OAIRequestRoutesDepartureSearch.cpp  OAIRequestRoutesDepartureSearch.h  OAIRequestRoutesProperty.cpp  OAIRequestRoutesProperty.h  OAIRequestSupportedLocations.cpp  OAIRequestSupportedLocations.h  OAIRequestTimeFilter.cpp  OAIRequestTimeFilter.h  OAIRequestTimeFilterArrivalSearch.cpp  OAIRequestTimeFilterArrivalSearch.h  OAIRequestTimeFilterDepartureSearch.cpp  OAIRequestTimeFilterDepartureSearch.h  OAIRequestTimeFilterFast.cpp  OAIRequestTimeFilterFast.h  OAIRequestTimeFilterFastArrivalManyToOneSearch.cpp  (+158 more)
(+17864 files in other folders)
